--- a/calculator-main/templates/end.html
+++ b/calculator-main/templates/end.html
@@ -29,10 +29,14 @@
         <img class="rez__img" src="../../static/img/planet_medium.svg" alt="">
         <span>Ваш результат {{result}} кВт⋅ч</span>
         <span>Ваш дом имеет среднюю энергоэффективность!</span>
+        <span>Хотите помочь экологии? Заполните форму и мы соберем вам экологичную сборку!</span>
+        <a href="{{ url_for('form') }}"class="main_link">Ссылка</a>
         {%elif result >= 300%}
         <img class="rez__img" src="../../static/img/planet_bad.svg" alt="">
         <span>Ваш результат {{result}} кВт⋅ч</span>
         <span>Ваш дом имеет плохую энергоэффективность!</span>
+        <span>Хотите помочь экологии? Заполните форму и мы соберем вам экологичную сборку!</span>
+        <a href="{{ url_for('form') }}"class="main_link">Ссылка</a>
         {%endif%}
     </div>
     {% endblock %}
